# QR_code_Demo

./: .env.example  README.md  ngrok.py  pyproject.toml  requirements.txt
app/: api.py
app/models/: model_qrcode.py  model_room.py
app/routers/: qrcode.py  room.py
app/services/: service_qrcode.py  service_room.py
docker/: Dockerfile
